--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/react-toastify": "^4.0.2",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
     "dom-to-image": "^2.6.0",
